@@ -9,7 +9,7 @@
  * @subpackage  Gutenberg CSS Frontend
  * @copyright   Copyright (c) 2022, WeCodeArt Framework
  * @since		5.0.0
- * @version		5.1.2
+ * @version		5.4.8
  */
 
 namespace WeCodeArt\Gutenberg\Modules\Styles\Blocks;
@@ -35,9 +35,9 @@ class Button extends Base {
 		$output['element'] 	= join( '>', [ $this->element, '.wp-block-button__link' ] );
 
 		// Inline Style
-		if( $css_style = get_prop( $this->attrs, 'style', false ) ) {
+		if( $css_style = get_prop( $this->attrs, 'style' ) ) {
 			// Spacing
-			if( $spacing = get_prop( $css_style, 'spacing', false ) ) {
+			if( $spacing = get_prop( $css_style, 'spacing' ) ) {
 				if ( $padding = get_prop( $spacing, 'padding', [] ) ) {
 					if( ! empty( $padding ) ) {
 						foreach( $padding as $dir => $val ) {
@@ -52,18 +52,31 @@ class Button extends Base {
 
 			// Border
 			if( $border = get_prop( $css_style, 'border', [] ) ) {
-				if ( $value = get_prop( $border, 'radius', false ) ) {
-					$this->output[] = wp_parse_args( [
-						'property' 	=> 'border-radius',
-						'value'	  	=> $value
-					], $output );
+				if ( $value = get_prop( $border, 'radius' ) ) {
+					if ( is_array( $value ) ) {
+						// We have individual border radius corner values.
+						foreach ( $value as $key => $radius ) {
+							// Convert CamelCase corner name to kebab-case.
+							$corner   = strtolower( preg_replace( '/(?<!^)[A-Z]/', '-$0', $key ) );
+							$this->output[] = wp_parse_args( [
+								'property' 	=> sprintf( 'border-%s-radius', $corner ),
+								'value'	  	=> $radius,
+							], $output );
+						}
+					} else {
+						$this->output[] = wp_parse_args( [
+							'property' 	=> 'border-radius',
+							'value'	  	=> $value,
+							'units'		=> is_numeric( $value ) ? 'px' : null
+						], $output );
+					}
 				}
 			}
 
 			// Colors
-			if ( $color = get_prop( $css_style, 'color', false ) ) {
+			if ( $color = get_prop( $css_style, 'color' ) ) {
 				// Text
-				if ( $value = get_prop( $color, 'text', false ) ) {
+				if ( $value = get_prop( $color, 'text' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> '--wp--color',
 						'value'	  	=> $value
@@ -74,14 +87,14 @@ class Button extends Base {
 					], $output );
 				}
 				// Background
-				if ( $value = get_prop( $color, 'background', false ) ) {
+				if ( $value = get_prop( $color, 'background' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> 'background-color',
 						'value'	  	=> $value
 					], $output );
 				}
 				// Gradient
-				if ( $value = get_prop( $color, 'gradient', false ) ) {
+				if ( $value = get_prop( $color, 'gradient' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> 'background-image',
 						'value'	  	=> $value
