@@ -38,22 +38,35 @@ class Search extends Base {
 		];
 
 		// Inline Style
-		if( $css_style = get_prop( $this->attrs, 'style', false ) ) {
+		if( $css_style = get_prop( $this->attrs, 'style' ) ) {
 			// Border
 			if( $border = get_prop( $css_style, 'border', [] ) ) {
-				if ( $value = get_prop( $border, 'width', false ) ) {
+				if ( $value = get_prop( $border, 'width' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> 'border-width',
 						'value'	  	=> $value
 					], $output );
 				}
-				if ( $value = get_prop( $border, 'radius', false ) ) {
-					$this->output[] = wp_parse_args( [
-						'property' 	=> 'border-radius',
-						'value'	  	=> $value
-					], $output );
+				if ( $value = get_prop( $border, 'radius' ) ) {
+					if ( is_array( $value ) ) {
+						// We have individual border radius corner values.
+						foreach ( $value as $key => $radius ) {
+							// Convert CamelCase corner name to kebab-case.
+							$corner   = strtolower( preg_replace( '/(?<!^)[A-Z]/', '-$0', $key ) );
+							$this->output[] = wp_parse_args( [
+								'property' 	=> sprintf( 'border-%s-radius', $corner ),
+								'value'	  	=> $radius,
+							], $output );
+						}
+					} else {
+						$this->output[] = wp_parse_args( [
+							'property' 	=> 'border-radius',
+							'value'	  	=> $value,
+							'units'		=> is_numeric( $value ) ? 'px' : null
+						], $output );
+					}
 				}
-				if ( $value = get_prop( $border, 'color', false ) ) {
+				if ( $value = get_prop( $border, 'color' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> 'border-color',
 						'value'	  	=> $value
@@ -62,9 +75,9 @@ class Search extends Base {
 			}
 
 			// Colors
-			if ( $color = get_prop( $css_style, 'color', false ) ) {
+			if ( $color = get_prop( $css_style, 'color' ) ) {
 				// Text
-				if ( $value = get_prop( $color, 'text', false ) ) {
+				if ( $value = get_prop( $color, 'text' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> '--wp--color',
 						'value'	  	=> $value
@@ -75,14 +88,14 @@ class Search extends Base {
 					], $output );
 				}
 				// Background
-				if ( $value = get_prop( $color, 'background', false ) ) {
+				if ( $value = get_prop( $color, 'background' ) ) {
 					$this->output[] = wp_parse_args( [
 						'property' 	=> 'background-color',
 						'value'	  	=> $value
 					], $output );
 				}
 				// Gradient
-				if ( $value = get_prop( $color, 'gradient', false ) ) {
+				if ( $value = get_prop( $color, 'gradient' ) ) {
 					$this->output[] = wp_parse_args( [
 						'element'	=> join( ' ', [ $this->element, '.wp-block-button__link' ] ),
 						'property' 	=> 'background-image',
